# achitek-lsp

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  flake.nix  justfile  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
analysis/: Cargo.toml
analysis/src/: analyzer.rs  lib.rs
crates/achitek-ls/: CHANGELOG.md  Cargo.toml
crates/achitek-ls/src/: editor.rs  lib.rs
crates/achitek-ls/src/handlers/: completion.rs  definition.rs  did_change.rs  did_open.rs  document_symbol.rs  folding_range.rs  hover.rs  prepare_rename.rs  references.rs  rename.rs  selection_range.rs  workspace_symbol.rs
crates/achitek-ls/src/lsp/: project_diagnostics.rs  publish.rs
crates/achitek-ls/src/server/: utils.rs
crates/achitek-ls/tests/: integration.rs
crates/achitek-ls/tests/features/: document_symbol.rs  folding_range.rs  selection_range.rs  workspace_symbol.rs
crates/achitek-source/: CHANGELOG.md  Cargo.toml
crates/achitek-source/src/: lib.rs
crates/achitekfile/: CHANGELOG.md  Cargo.toml
crates/achitekfile/src/: diagnostics.rs  model.rs
crates/achitekfile/src/analysis/: diagnostics.rs  lowering.rs  mod.rs
crates/terafile/: CHANGELOG.md  Cargo.toml  build.rs
crates/terafile/src/: diagnostics.rs  lib.rs  model.rs  parser.rs  tree_sitter_tera.rs
crates/terafile/src/analysis/: diagnostics.rs  lowering.rs  mod.rs
docs/: ARCHITECTURE.md  CAPABILITIES.md
server/: Cargo.toml
server/src/: main.rs
src/: analysis.rs  arguments.rs  capabilities.rs  lib.rs  main.rs  syntax.rs
src/language_server/: logging.rs  mod.rs  server.rs
src/protocol/: diagnostics.rs  document.rs  mod.rs
src/protocol/handlers/: did_change.rs  did_close.rs  did_open.rs
src/server/: mod.rs
src/server/handlers/: definition.rs  diagnostics.rs  did_change.rs  did_open.rs  document_symbol.rs  folding_range.rs  formatting.rs  mod.rs  prepare_rename.rs  rename.rs  selection_range.rs
src/srv/: mod.rs  utils.rs
src/srv/handlers/: completion.rs  did_close.rs  formatting.rs  hover.rs  mod.rs  references.rs  workspace_symbol.rs
syntax/: Cargo.toml
syntax/src/: lib.rs  parser.rs
tests/: it.rs
tests/it/: notifications.rs  utils.rs
