[workspace]
members = [
  "server",
  "syntax",
  "analysis",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
ropey = "2.0.0-beta.1"
rustc-hash = "2.1.2"
serde = "1.0.228"
serde_json = "1.0.149"
smallvec = "2.0.0-alpha.12"
tracing = "0.1.44"
tree-sitter = "0.26.8"
tree-sitter-achitekfile = { git = "ssh://git@github.com/lalilul3lo/tree-sitter-achite.git", tag = "v0.2.0" }
