[package]
name = "achitek-ls"
version = "0.1.0"
edition = '2024'
rust-version = "1.90.0"
description = "achitekfile language server"
readme = "README.md"
repository = "https://github.com/achitek-org/achitek-ls"
license = "MIT"
keywords = ["achitekfile", "lsp", "language-server"]
categories = ["command-line-utilities"]

[[bin]]
name = "achitek-ls"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
lexopt = "0.3.2"
anyhow = "1.0.102"
thiserror = "2.0.18"
lsp-server = "0.7.9"
lsp-types = "0.97.0"
ropey = "2.0.0-beta.1"
rustc-hash = "2.1.2"
serde = "1.0.228"
serde_json = "1.0.149"
smallvec = "2.0.0-alpha.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "registry",
    "fmt",
    "std",
    "tracing-log",
] }
tree-sitter = "0.26.8"
tree-sitter-achitekfile = "0.1.0"
