[package]
name = "achitekfile"
authors = ["Samuel Joli <samuel.joli.ftn@gmail.com>"]
description = "A tree-sitter backed semantic parser for the Achitekfile DSL"
readme = "README.md"
repository.workspace = true
keywords = ["achitek", "parser", "tree-sitter", "dsl", "diagnostics"]
categories = ["parser-implementations", "development-tools"]
license = "MIT OR Apache-2.0"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
achitek-source = { version = "0.1.0", path = "../achitek-source" }
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"], optional = true }
tree-sitter = "0.26.8"
tree-sitter-achitekfile = "0.1.0"

[features]
serde = ["dep:serde", "achitek-source/serde"]

[dev-dependencies]
indoc = "2.0.7"

[lints]
workspace = true
