[package]
name = "terafile"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
description = "tera file parser"
readme = "README.md"
repository.workspace = true
license = "MIT"
# keywords = ["achitekfile", "lsp", "language-server"]
# categories = ["command-line-utilities"]


[dependencies]
achitek-source = { version = "0.1.0", path = "../achitek-source" }
tree-sitter = "0.26.8"
tree-sitter-language = "0.1.7"

[dev-dependencies]
indoc = "2.0.7"

[build-dependencies]
cc = "1.2.61"

[lints]
workspace = true
